<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <ModID>orison</ModID>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <SlayTheSpire.version>12-18-2022</SlayTheSpire.version>
        <ModTheSpire.version>3.30.0</ModTheSpire.version>

        <!--CHANGE THIS TO YOUR STEAM INSTALLATION-->
        <Steam.path>D:/SteamLibrary/steamapps/</Steam.path>
    </properties>

    <name>Orison</name>
    <version>0.0.0</version>
    <description>刻印模組</description>
    <groupId>orison</groupId>
    <artifactId>orison</artifactId>
    <!-- Change the above for mod information. -->

    <dependencies>
        <dependency>
            <groupId>com.megacrit.cardcrawl</groupId>
            <artifactId>slaythespire</artifactId>
            <version>${SlayTheSpire.version}</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/common/SlayTheSpire/desktop-1.0.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>modthespire</artifactId>
            <version>${ModTheSpire.version}</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1605060445/ModTheSpire.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>basemod</groupId>
            <artifactId>basemod</artifactId>
            <version>5.29.0</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1605833019/BaseMod.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl.mod</groupId>
            <artifactId>StSLib</artifactId>
            <version>1.3.2</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1609158507/StSLib.jar</systemPath>
        </dependency>
    </dependencies>


    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <copy file="target/${project.artifactId}.jar"
                                      tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>${ModID}Resources/**/*.json</exclude>
                    <exclude>ModTheSpire.json</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>ModTheSpire.json</include>
                    <include>${ModID}Resources/**/*.json</include>
                </includes>
            </resource>
        </resources>

    </build>
</project>
